fixed body background covering up the spiderweb effect

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@
       font-weight: 300;
       font-style: normal;
       color: #333;
-      background-color: #f4f4f4;
+      background: transparent;
       text-align: left;
   }
 
@@ -32,7 +32,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: -1;  /* ensure it stays behind your content */
+      z-index: -1;
   }
   
   #navbar {
@@ -78,15 +78,18 @@
       height: auto;
       margin: 15px auto;
       padding: 15px;
+      background-color: #f4f4f4;
       border-radius: 8px;
       box-shadow: 0px 0px 10px rgba(0, 0, 0.1, 0.3);
       word-wrap: break-word;
       overflow-wrap: break-word;
       white-space: normal;
+      position: relative;
   }
   
   .socials {
       padding: 5px;
+      background-color: inherit;
       border-radius: inherit;
       box-shadow: inherit;
       position: fixed;
